--- a/styles/index.css
+++ b/styles/index.css
@@ -83,11 +83,12 @@ body {
 
 .social-links {
   margin-top: 1rem;
+  font-size: 1.5rem;
 }
 .social-btn {
   outline: 0;
   width: 100%;
-  padding: 0.5rem;
+  padding: 0.75rem;
   color: white;
   background-color: #333333;
   margin-bottom: 0.5rem;
