--- a/styles/index.css
+++ b/styles/index.css
@@ -40,15 +40,15 @@ body {
   align-items: center;
   background-color: #1f1f1f;
   color: white;
-  width: 30%;
-  min-width: 400px;
+  width: 25%;
+  min-width: 24rem;
   border-radius: 1rem;
-  padding: 1rem;
+  padding: 2.5rem 1rem 1rem 1rem;
 }
 
 @media only screen and (max-width: 600px) {
   #container {
-    width: 90%;
+    width: 70%;
     min-width: initial;
     margin: 0 1rem;
 
@@ -56,9 +56,9 @@ body {
 }
 
 .avatar {
-  width: 5rem;
-  height: 5rem;
-  margin-bottom: 0.25rem;
+  width: 5.5rem;
+  height: 5.5rem;
+  margin-bottom: 1rem;
 }
 
 .avatar img {
@@ -67,31 +67,35 @@ body {
 }
 
 .name {
-  font-size: 1.2rem;
+  font-size: 1.5rem;
+  font-weight: 500;
 }
 
 .location {
   font-size: 1rem;
+  font-weight: 500;
   margin-top: 0.25rem;
   color: #c3da6b;
 }
 
 .job-title {
-  font-size: 0.75rem;
+  font-size: 1rem;
   margin-top: 1.5rem;
 }
 
 .social-links {
   margin-top: 1rem;
-  font-size: 1.5rem;
+  padding: 0 1rem;
 }
 .social-btn {
+  font-size: 1rem;
+  font-weight: 500;
   outline: 0;
   width: 100%;
   padding: 0.75rem;
   color: white;
   background-color: #333333;
-  margin-bottom: 0.5rem;
+  margin-bottom: 1rem;
   border: 0;
   border-radius: 0.125rem;
   cursor: pointer;
